samples/_failures_safe/1761187953_4b044b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51310a46.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_51310a46.c:128:5: error: expected expression at end of input
  128 |     mat = create_matrix(rows,
      |     ^~~
./samples/SAFE/__tmp_51310a46.c:128:5: error: expected declaration or statement at end of input
